--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "spriteset.h": "c"
+        "spriteset.h": "c",
+        "interrupt.h": "c"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
